# ntlmclient

./: .travis.yml  CMakeLists.txt  HEAD.json  LICENSE.txt  README.md  api.docurium  azure-pipelines.yml  project.json
.github/workflows/: main.yml
azure-pipelines/: bash.yml  docker.yml
ci/: build.sh  test.sh
cli/: base64.c  base64.h  ntlm_cli.c  ntlm_cli_opt.c  ntlm_cli_opt.h
cmake/: EnableWarnings.cmake
include/: ntlmclient.h
scripts/: cibuild.sh  coverity.sh  docurium.sh
src/: cli.c  crypt.h  crypt_commoncrypto.c  crypt_mbedtls.c  crypt_openssl.c  crypt_openssl.h  ntlm.c  ntlm.h  unicode.h  unicode_builtin.c  unicode_iconv.c  utf8.h  util.c  util.h
tests/: challenge.c  clar.c  generate.py  inputs.c  negotiate.c  ntlm_tests.h  response.c  unicode.c
tests/clar/: fixtures.h
